"Rajout des attributs de la classe Personnage"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 14)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(jdrgames main.cpp)
+add_executable(jdrgames main.cpp Personnage.cpp Personnage.h)
 target_link_libraries(jdrgames ${CONAN_LIBS})
